kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-gunicorn-tini
  name: flask-gunicorn-tini
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-gunicorn-tini
  strategy: {}
  template:
    metadata:
      labels:
        app: flask-gunicorn-tini
    spec:
      containers:
        - image: flask-gunicorn-tini:v1
          name: flask-gunicorn-tini
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 120Mi
            requests:
              cpu: 20m
              memory: 55Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
status: {}
