kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-gunicorn-tini
  name: flask-gunicorn-tini
spec:
  ports:
    - name: 8000-8000
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: flask-gunicorn-tini
  type: ClusterIP
status:
  loadBalancer: {}
